// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditSettingsView renders and matches the snapshot 1`] = `
.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  min-width: 0;
}

.c11 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c18 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c26 {
  background: #ffffff;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  width: 100%;
  cursor: default;
}

.c29 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c36 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c37 {
  background: #eaeaef;
}

.c46 {
  padding: 16px;
  border-radius: 4px;
  border-style: dashed;
  border-width: 1px;
  border-color: #c0c0cf;
}

.c50 {
  background: #f6f6f9;
  border-radius: 4px;
  border-color: #eaeaef;
  border: 1px solid #eaeaef;
  width: 100%;
  min-height: 2rem;
}

.c53 {
  padding-right: 12px;
  padding-left: 12px;
}

.c56 {
  overflow: hidden;
  width: 100%;
}

.c57 {
  padding-left: 12px;
}

.c59 {
  background: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border-width: 0;
  border-color: #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c65 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  width: 100%;
  cursor: pointer;
}

.c10 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c15 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 0;
  color: #ffffff;
}

.c16 {
  font-size: 1rem;
  line-height: 1.5;
  color: #666687;
}

.c20 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c31 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c35 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c39 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c58 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  color: #32324d;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c47 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c51 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c60 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c66 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: relative;
  outline: none;
}

.c13 > svg {
  height: 12px;
  width: 12px;
}

.c13 > svg > g,
.c13 > svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c63 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c14 {
  height: 2rem;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c9 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c14:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c67 {
  height: 2rem;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
}

.c67[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c67[aria-disabled='true'] .c9 {
  color: #666687;
}

.c67[aria-disabled='true'] svg > g,.c67[aria-disabled='true'] svg path {
  fill: #666687;
}

.c67[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c67[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c67[aria-disabled='true']:active svg > g,.c67[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c67:hover {
  background-color: #ffffff;
}

.c67:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c67:active .c9 {
  color: #4945ff;
}

.c67:active svg > g,
.c67:active svg path {
  fill: #4945ff;
}

.c67 .c9 {
  color: #271fe0;
}

.c67 svg > g,
.c67 svg path {
  fill: #271fe0;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  border: 1px solid #dcdce4;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28[aria-disabled='true'] {
  color: #666687;
}

.c28:focus-visible {
  outline: none;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c34 > svg {
  width: 0.375rem;
}

.c34 > svg > path {
  fill: #666687;
}

.c32 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c68[data-state='checked'] .c9 {
  font-weight: bold;
  color: #4945ff;
}

.c38 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c21 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c22 {
  grid-column: span 6;
  max-width: 100%;
}

.c48 {
  grid-column: span 6;
  max-width: 100%;
}

.c61 svg > g,
.c61 svg path {
  fill: #8e8ea9;
}

.c61:hover svg > g,
.c61:hover svg path {
  fill: #666687;
}

.c61:active svg > g,
.c61:active svg path {
  fill: #a5a5ba;
}

.c61[aria-disabled='true'] svg path {
  fill: #666687;
}

.c0:focus-visible {
  outline: none;
}

.c40 {
  background: #4945ff;
  padding-top: 8px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
}

.c5 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c45 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c41 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c44 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 8px;
  position: relative;
  outline: none;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3 svg path {
  fill: #4945ff;
}

.c3:hover {
  color: #7b79ff;
}

.c3:active {
  color: #271fe0;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c42 {
  position: relative;
  outline: none;
}

.c42 > svg {
  height: 12px;
  width: 12px;
}

.c42 > svg > g,
.c42 > svg path {
  fill: #ffffff;
}

.c42[aria-disabled='true'] {
  pointer-events: none;
}

.c42:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c42:focus-visible {
  outline: none;
}

.c42:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c43 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
}

.c43[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c43[aria-disabled='true'] .c4 {
  color: #666687;
}

.c43[aria-disabled='true'] svg > g,.c43[aria-disabled='true'] svg path {
  fill: #666687;
}

.c43[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c43[aria-disabled='true']:active .c4 {
  color: #666687;
}

.c43[aria-disabled='true']:active svg > g,.c43[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c43:hover {
  background-color: #ffffff;
}

.c43:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c43:active .c4 {
  color: #4945ff;
}

.c43:active svg > g,
.c43:active svg path {
  fill: #4945ff;
}

.c43 .c4 {
  color: #271fe0;
}

.c43 svg > g,
.c43 svg path {
  fill: #271fe0;
}

.c62 {
  background-color: transparent;
}

.c62 path {
  fill: #666687;
}

.c49 {
  position: relative;
  padding-right: 4px;
}

.c64 {
  position: relative;
  padding-left: 4px;
}

.c55 {
  height: 0.75rem;
  width: 0.75rem;
}

.c55 path {
  fill: #666687;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c54 {
  cursor: all-scroll;
  border-right: 1px solid #dcdce4;
}

@media (max-width:68.75rem) {
  .c22 {
    grid-column: span 12;
  }
}

@media (max-width:34.375rem) {
  .c22 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c48 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c48 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form>
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                  fill="#212134"
                />
              </svg>
              <span
                class="c4 c5"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7 c8"
            >
              <h1
                class="c9 c10"
              >
                Configure the view - Address
              </h1>
            </div>
            <button
              aria-disabled="true"
              class="c11 c12 c13 c14"
              disabled=""
              type="submit"
            >
              <div
                aria-hidden="true"
                class=""
              >
                <svg
                  fill="none"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c9 c15"
              >
                Save
              </span>
            </button>
          </div>
          <p
            class="c9 c16"
          >
            Customize how the edit view will look like.
          </p>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <h2
              class="c9 c20"
            >
              Settings
            </h2>
            <div
              class="c21"
            >
              <div
                class="c22"
              >
                <div
                  class=""
                >
                  <div
                    class=""
                  >
                    <div
                      class="c23"
                    >
                      <label
                        class="c9 c24 c25"
                        for="1"
                      >
                        Entry title
                      </label>
                      <div
                        aria-autocomplete="none"
                        aria-controls="radix-0"
                        aria-describedby="1-hint 1-error"
                        aria-expanded="false"
                        aria-label="Entry title"
                        class="c26 c27 c28"
                        data-state="closed"
                        dir="ltr"
                        id="1"
                        overflow="hidden"
                        role="combobox"
                        tabindex="0"
                      >
                        <span
                          class="c29 c30"
                        >
                          <span
                            class="c9 c31 c32"
                          >
                            <span
                              class="c33"
                            >
                              postal_code
                            </span>
                          </span>
                        </span>
                        <span
                          class="c30"
                        >
                          <span
                            aria-hidden="true"
                            class="c34"
                          >
                            <svg
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <p
                        class="c9 c35"
                        id="1-hint"
                      >
                        Set the display field of your entry
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c36"
            >
              <hr
                class="c37 c38"
              />
            </div>
            <h3
              class="c9 c20"
            >
              View
            </h3>
            <div
              class="c19"
            >
              <div
                class="c6"
              >
                <div>
                  <div
                    class=""
                  >
                    <span
                      class="c9 c39"
                    >
                      Displayed fields
                    </span>
                  </div>
                  <div
                    class=""
                  >
                    <span
                      class="c9 c35"
                    >
                      Drag & drop the fields to build the layout
                    </span>
                  </div>
                </div>
                <div>
                  <a
                    aria-disabled="false"
                    class="c40 c41 c42 c43"
                    href="/plugins/content-type-builder/content-types/api::address.address"
                  >
                    <div
                      aria-hidden="true"
                      class="c44"
                    >
                      <svg
                        fill="none"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                          fill="#212134"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <span
                      class="c4 c45"
                    >
                      Edit the content type
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="c46"
              >
                <div
                  class="c47"
                >
                  <div
                    class="c21"
                  >
                    <div
                      class="c48"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c8 c49"
                        >
                          <div
                            class="c50 c51 c52"
                          >
                            <span
                              class="c53 c8 c54"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c55"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 24"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574A1.943 1.943 0 0 1 14.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 0 1 1.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0 0 17.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM16.563 14.372a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005ZM16.563 23.392a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM7.378 5.622a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005ZM7.378 14.406a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006ZM7.378 23.427a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 0 0 8.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0Z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c56"
                              overflow="hidden"
                            >
                              <div
                                class="c57 c6"
                              >
                                <span
                                  class="c9 c58"
                                >
                                  postal_code
                                </span>
                                <div
                                  class="c8"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="2"
                                      class="c59 c60 c13 c61 c62"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c63"
                                      >
                                        Edit postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="3"
                                      class="c59 c60 c13 c61 c62"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c63"
                                      >
                                        Delete postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 0 0-.197.233L6 24h12l2.96-17.618a.2.2 0 0 0-.196-.233H3.236ZM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 0 1-.2.2H2.2a.2.2 0 0 1-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8Z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c48"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c8 c64"
                        >
                          <div
                            class="c50 c51 c52"
                          >
                            <span
                              class="c53 c8 c54"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c55"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 24"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574A1.943 1.943 0 0 1 14.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 0 1 1.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0 0 17.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM16.563 14.372a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005ZM16.563 23.392a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM7.378 5.622a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005ZM7.378 14.406a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006ZM7.378 23.427a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 0 0 8.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0Z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c56"
                              overflow="hidden"
                            >
                              <div
                                class="c57 c6"
                              >
                                <span
                                  class="c9 c58"
                                >
                                  city
                                </span>
                                <div
                                  class="c8"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="4"
                                      class="c59 c60 c13 c61 c62"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c63"
                                      >
                                        Edit city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="5"
                                      class="c59 c60 c13 c61 c62"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c63"
                                      >
                                        Delete city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 0 0-.197.233L6 24h12l2.96-17.618a.2.2 0 0 0-.196-.233H3.236ZM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 0 1-.2.2H2.2a.2.2 0 0 1-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8Z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      aria-controls="label"
                      aria-disabled="true"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="c65 c66 c13 c67"
                      data-testid="add-field"
                      disabled=""
                      label="Insert another field"
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        class=""
                      >
                        <svg
                          fill="none"
                          height="1rem"
                          viewBox="0 0 24 24"
                          width="1rem"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 13.604a.3.3 0 0 1-.3.3h-9.795V23.7a.3.3 0 0 1-.3.3h-3.21a.3.3 0 0 1-.3-.3v-9.795H.3a.3.3 0 0 1-.3-.3v-3.21a.3.3 0 0 1 .3-.3h9.795V.3a.3.3 0 0 1 .3-.3h3.21a.3.3 0 0 1 .3.3v9.795H23.7a.3.3 0 0 1 .3.3v3.21Z"
                            fill="#212134"
                          />
                        </svg>
                      </div>
                      <span
                        class="c9 c15"
                      >
                        Insert another field
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c63"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`EditSettingsView should add field 1`] = `
.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  min-width: 0;
}

.c11 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c18 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c26 {
  background: #ffffff;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  width: 100%;
  cursor: default;
}

.c29 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c36 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c37 {
  background: #eaeaef;
}

.c46 {
  padding: 16px;
  border-radius: 4px;
  border-style: dashed;
  border-width: 1px;
  border-color: #c0c0cf;
}

.c50 {
  background: #f6f6f9;
  border-radius: 4px;
  border-color: #eaeaef;
  border: 1px solid #eaeaef;
  width: 100%;
  min-height: 2rem;
}

.c53 {
  padding-right: 12px;
  padding-left: 12px;
}

.c56 {
  overflow: hidden;
  width: 100%;
}

.c57 {
  padding-left: 12px;
}

.c59 {
  background: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border-width: 0;
  border-color: #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c65 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  width: 100%;
  cursor: pointer;
}

.c10 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c15 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 0;
  color: #ffffff;
}

.c16 {
  font-size: 1rem;
  line-height: 1.5;
  color: #666687;
}

.c20 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c31 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c35 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c39 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c58 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  color: #32324d;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c47 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c51 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c60 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c66 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: relative;
  outline: none;
}

.c13 > svg {
  height: 12px;
  width: 12px;
}

.c13 > svg > g,
.c13 > svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c63 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c14 {
  height: 2rem;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c9 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c14:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c67 {
  height: 2rem;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
}

.c67[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c67[aria-disabled='true'] .c9 {
  color: #666687;
}

.c67[aria-disabled='true'] svg > g,.c67[aria-disabled='true'] svg path {
  fill: #666687;
}

.c67[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c67[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c67[aria-disabled='true']:active svg > g,.c67[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c67:hover {
  background-color: #ffffff;
}

.c67:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c67:active .c9 {
  color: #4945ff;
}

.c67:active svg > g,
.c67:active svg path {
  fill: #4945ff;
}

.c67 .c9 {
  color: #271fe0;
}

.c67 svg > g,
.c67 svg path {
  fill: #271fe0;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  border: 1px solid #dcdce4;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28[aria-disabled='true'] {
  color: #666687;
}

.c28:focus-visible {
  outline: none;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c34 > svg {
  width: 0.375rem;
}

.c34 > svg > path {
  fill: #666687;
}

.c32 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c68[data-state='checked'] .c9 {
  font-weight: bold;
  color: #4945ff;
}

.c38 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c21 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c22 {
  grid-column: span 6;
  max-width: 100%;
}

.c48 {
  grid-column: span 6;
  max-width: 100%;
}

.c61 svg > g,
.c61 svg path {
  fill: #8e8ea9;
}

.c61:hover svg > g,
.c61:hover svg path {
  fill: #666687;
}

.c61:active svg > g,
.c61:active svg path {
  fill: #a5a5ba;
}

.c61[aria-disabled='true'] svg path {
  fill: #666687;
}

.c0:focus-visible {
  outline: none;
}

.c40 {
  background: #4945ff;
  padding-top: 8px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
}

.c5 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c45 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c41 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c44 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 8px;
  position: relative;
  outline: none;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3 svg path {
  fill: #4945ff;
}

.c3:hover {
  color: #7b79ff;
}

.c3:active {
  color: #271fe0;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c42 {
  position: relative;
  outline: none;
}

.c42 > svg {
  height: 12px;
  width: 12px;
}

.c42 > svg > g,
.c42 > svg path {
  fill: #ffffff;
}

.c42[aria-disabled='true'] {
  pointer-events: none;
}

.c42:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c42:focus-visible {
  outline: none;
}

.c42:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c43 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
}

.c43[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c43[aria-disabled='true'] .c4 {
  color: #666687;
}

.c43[aria-disabled='true'] svg > g,.c43[aria-disabled='true'] svg path {
  fill: #666687;
}

.c43[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c43[aria-disabled='true']:active .c4 {
  color: #666687;
}

.c43[aria-disabled='true']:active svg > g,.c43[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c43:hover {
  background-color: #ffffff;
}

.c43:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c43:active .c4 {
  color: #4945ff;
}

.c43:active svg > g,
.c43:active svg path {
  fill: #4945ff;
}

.c43 .c4 {
  color: #271fe0;
}

.c43 svg > g,
.c43 svg path {
  fill: #271fe0;
}

.c62 {
  background-color: transparent;
}

.c62 path {
  fill: #666687;
}

.c49 {
  position: relative;
  padding-right: 4px;
}

.c64 {
  position: relative;
  padding-left: 4px;
}

.c55 {
  height: 0.75rem;
  width: 0.75rem;
}

.c55 path {
  fill: #666687;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c54 {
  cursor: all-scroll;
  border-right: 1px solid #dcdce4;
}

@media (max-width:68.75rem) {
  .c22 {
    grid-column: span 12;
  }
}

@media (max-width:34.375rem) {
  .c22 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c48 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c48 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form>
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                  fill="#212134"
                />
              </svg>
              <span
                class="c4 c5"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7 c8"
            >
              <h1
                class="c9 c10"
              >
                Configure the view - Address
              </h1>
            </div>
            <button
              aria-disabled="true"
              class="c11 c12 c13 c14"
              disabled=""
              type="submit"
            >
              <div
                aria-hidden="true"
                class=""
              >
                <svg
                  fill="none"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c9 c15"
              >
                Save
              </span>
            </button>
          </div>
          <p
            class="c9 c16"
          >
            Customize how the edit view will look like.
          </p>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <h2
              class="c9 c20"
            >
              Settings
            </h2>
            <div
              class="c21"
            >
              <div
                class="c22"
              >
                <div
                  class=""
                >
                  <div
                    class=""
                  >
                    <div
                      class="c23"
                    >
                      <label
                        class="c9 c24 c25"
                        for="13"
                      >
                        Entry title
                      </label>
                      <div
                        aria-autocomplete="none"
                        aria-controls="radix-3"
                        aria-describedby="13-hint 13-error"
                        aria-expanded="false"
                        aria-label="Entry title"
                        class="c26 c27 c28"
                        data-state="closed"
                        dir="ltr"
                        id="13"
                        overflow="hidden"
                        role="combobox"
                        tabindex="0"
                      >
                        <span
                          class="c29 c30"
                        >
                          <span
                            class="c9 c31 c32"
                          >
                            <span
                              class="c33"
                            >
                              postal_code
                            </span>
                          </span>
                        </span>
                        <span
                          class="c30"
                        >
                          <span
                            aria-hidden="true"
                            class="c34"
                          >
                            <svg
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <p
                        class="c9 c35"
                        id="13-hint"
                      >
                        Set the display field of your entry
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c36"
            >
              <hr
                class="c37 c38"
              />
            </div>
            <h3
              class="c9 c20"
            >
              View
            </h3>
            <div
              class="c19"
            >
              <div
                class="c6"
              >
                <div>
                  <div
                    class=""
                  >
                    <span
                      class="c9 c39"
                    >
                      Displayed fields
                    </span>
                  </div>
                  <div
                    class=""
                  >
                    <span
                      class="c9 c35"
                    >
                      Drag & drop the fields to build the layout
                    </span>
                  </div>
                </div>
                <div>
                  <a
                    aria-disabled="false"
                    class="c40 c41 c42 c43"
                    href="/plugins/content-type-builder/content-types/api::address.address"
                  >
                    <div
                      aria-hidden="true"
                      class="c44"
                    >
                      <svg
                        fill="none"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                          fill="#212134"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <span
                      class="c4 c45"
                    >
                      Edit the content type
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="c46"
              >
                <div
                  class="c47"
                >
                  <div
                    class="c21"
                  >
                    <div
                      class="c48"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c8 c49"
                        >
                          <div
                            class="c50 c51 c52"
                          >
                            <span
                              class="c53 c8 c54"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c55"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 24"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574A1.943 1.943 0 0 1 14.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 0 1 1.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0 0 17.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM16.563 14.372a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005ZM16.563 23.392a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM7.378 5.622a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005ZM7.378 14.406a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006ZM7.378 23.427a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 0 0 8.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0Z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c56"
                              overflow="hidden"
                            >
                              <div
                                class="c57 c6"
                              >
                                <span
                                  class="c9 c58"
                                >
                                  postal_code
                                </span>
                                <div
                                  class="c8"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="14"
                                      class="c59 c60 c13 c61 c62"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c63"
                                      >
                                        Edit postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="15"
                                      class="c59 c60 c13 c61 c62"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c63"
                                      >
                                        Delete postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 0 0-.197.233L6 24h12l2.96-17.618a.2.2 0 0 0-.196-.233H3.236ZM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 0 1-.2.2H2.2a.2.2 0 0 1-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8Z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c48"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c8 c64"
                        >
                          <div
                            class="c50 c51 c52"
                          >
                            <span
                              class="c53 c8 c54"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c55"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 24"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574A1.943 1.943 0 0 1 14.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 0 1 1.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0 0 17.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM16.563 14.372a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005ZM16.563 23.392a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM7.378 5.622a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005ZM7.378 14.406a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006ZM7.378 23.427a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 0 0 8.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0Z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c56"
                              overflow="hidden"
                            >
                              <div
                                class="c57 c6"
                              >
                                <span
                                  class="c9 c58"
                                >
                                  city
                                </span>
                                <div
                                  class="c8"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="16"
                                      class="c59 c60 c13 c61 c62"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c63"
                                      >
                                        Edit city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="17"
                                      class="c59 c60 c13 c61 c62"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c63"
                                      >
                                        Delete city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 0 0-.197.233L6 24h12l2.96-17.618a.2.2 0 0 0-.196-.233H3.236ZM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 0 1-.2.2H2.2a.2.2 0 0 1-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8Z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      aria-controls="label"
                      aria-disabled="true"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="c65 c66 c13 c67"
                      data-testid="add-field"
                      disabled=""
                      label="Insert another field"
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        class=""
                      >
                        <svg
                          fill="none"
                          height="1rem"
                          viewBox="0 0 24 24"
                          width="1rem"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 13.604a.3.3 0 0 1-.3.3h-9.795V23.7a.3.3 0 0 1-.3.3h-3.21a.3.3 0 0 1-.3-.3v-9.795H.3a.3.3 0 0 1-.3-.3v-3.21a.3.3 0 0 1 .3-.3h9.795V.3a.3.3 0 0 1 .3-.3h3.21a.3.3 0 0 1 .3.3v9.795H23.7a.3.3 0 0 1 .3.3v3.21Z"
                            fill="#212134"
                          />
                        </svg>
                      </div>
                      <span
                        class="c9 c15"
                      >
                        Insert another field
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c63"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
